Stack basics + 1 question

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
     "ostream": "cpp",
     "algorithm": "cpp",
     "vector": "cpp",
-    "map": "cpp"
+    "map": "cpp",
+    "array": "cpp"
   }
 }
